<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            app:civ_border_color="@android:color/holo_blue_light" />
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextContent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextContent.Subtitle"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/vision"
        android:layout_marginBottom="8dp"/>

    <TableLayout
        android:id="@+id/tableLayoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_email_24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSpec.Value"
                android:text="@string/email_value"
                android:textColor="@color/colorSubTitle"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_school_24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSpec.Value"
                android:text="@string/school_value"
                android:textColor="@color/colorSubTitle"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_home_24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSpec.Value"
                android:text="@string/home_value"
                android:textColor="@color/colorSubTitle"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_cake_24dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextSpec.Value"
                android:text="@string/birthday_value"
                android:textColor="@color/colorSubTitle"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>