<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:id="@+id/sampleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_headerIndicator="@id/headerIndicator"
        app:expansion_layout="@id/expansionLayout"
        app:expansion_toggleOnClick="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/nutritional"
                android:textColor="#3E3E3E"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="120dp"
                android:text="@string/nutritional_info"
                android:textColor="#AAA" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/headerIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </RelativeLayout>

    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:expansion_expanded="false">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextSpec.Field"
                        android:text="@string/calories" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDetailCalories"
                        style="@style/TextSpec.Value"
                        tools:text="@string/calories" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextSpec.Field"
                        android:text="@string/fat" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDetailFat"
                        style="@style/TextSpec.Value"
                        tools:text="@string/fat" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextSpec.Field"
                        android:text="@string/carbo" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDetailCarbo"
                        style="@style/TextSpec.Value"
                        tools:text="@string/carbo" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextSpec.Field"
                        android:text="@string/protein" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textViewDetailProtein"
                        style="@style/TextSpec.Value"
                        tools:text="@string/protein" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </com.github.florent37.expansionpanel.ExpansionLayout>

</LinearLayout>